--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ section {
   align-items: center;
 }
 .money {
-  margin: 5px;
+  margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,4 +69,64 @@ section {
   border-bottom: 2px solid silver;
   width: 40%;
   text-align: center;
+}
+.cart {
+  width: 300px;
+  height: 300px;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 20px;
+}
+.overlay h1 {
+  font-size: 50px;
+}
+.div1 {
+  background-color: #b8d7db;
+}
+.div2 {
+  background-color: #ffeeee;
+}
+.div3 {
+  background-color: #fff4d6;
+}
+.half-width h1 {
+  font-size: 50px;
+}
+.half-width {
+  width: 40%;
+  margin: 3%;
+  padding: 2%;
+  float: left;
+}
+.half-width img {
+  width: 100%;
+  border-radius: 5px;
+}
+.update {
+  background-color: #fff4d6;
+  width: 70%;
+  height: 250px;
+  border-radius: 10px;
+}
+.update input {
+  margin-left: 20px;
+  border: none;
+  background-color: #aa9f9f;
+  padding: 20px 30px;
+  border-radius: 5px;
+  width: 42%;
+}
+.last-paragraph p {
+  color: #707070;
+}
+.footer-part {
+  background-color: #0b0d17;
+  height: 200px;
+  color: #fff4d6;
+}
+.footer-part h3 {
+  color: #ff5959;
+}
+.footer-part a {
+  color: #707070;
 }
